Fully working and all tests/sanity passing

--- a/test/integration/targets/cloudistics/defaults/main.yml
+++ b/test/integration/targets/cloudistics/defaults/main.yml
@@ -5,17 +5,15 @@ tag_prefix: 'testing-'
 cldstcs_description: 'Test Description'
 cldstcs_vcpus: 1
 cldstcs_memory: 1073741824
-cldstcs_template_name: 'World Community Grid'
+cldstcs_template_name: 'Centos 7.3 with Cloudera 5.10'
 cldstcs_category_name: Default
-cldstcs_data_center_name: DC2
-cldstcs_migration_zone_name: MZ1
-cldstcs_flash_pool_name: SP1
+cldstcs_data_center_name: 'Prod VDC'
+cldstcs_migration_zone_name: 'Prod-MZ'
+cldstcs_flash_pool_name: 'Prod-Storage-Pool'
 cldstcs_nics:
   - name: 'vNIC 0'
-    vnet_name: Vnet1
+    vnet_name: 'Prod-MZ-VNET-01'
     type: 'Virtual Networking'
-    firewall_name: 'allow all'
 cldstcs_tag_names:
-  - TT1
-  - TT2
+  - 'CLD-1'
 
